tests/ui/traits/cast-as-dyn-trait-wo-assoc-type-issue-21950.stderr
error[E0191]: the value of the associated type `Output` in `Add` must be specified
  --> $DIR/cast-as-dyn-trait-wo-assoc-type-issue-21950.rs:17:25
   |
LL |     type Output;
   |     ----------- `Output` defined here
...
LL |     let x = &10 as &dyn Add;
   |                         ^^^ help: specify the associated type: `Add<Output = Type>`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0191`.
